[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["kaikaine <kairijb@protonmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.4"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
asyncpg = "^0.29.0"
quart-sqlalchemy = "^3.0.4"
quart-bcrypt = "^0.0.7"
quart-auth = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api:run"